bubble-animation/application-mainfest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bubble-animation-mohan
  name: bubble-animationm-mohan
  namespace: bubble-animation-mohan
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bubble-animation-mohan
    weight: 100
